# Sugar_Pi_Engine

./: CMakeLists.txt  README.md
assets/: assets.txt  config.txt  simconfig.txt
src/: Action.cpp  Action.h  AssetManager.cpp  AssetManager.h  Components.cpp  Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  Scene.cpp  Scene.h  Scene_Menu.cpp  Scene_Menu.h  Scene_Play.cpp  Scene_Play.h  SimpleEntity.cpp  SimpleEntity.h  TestUIElement.cpp  TestUIElement.h  UIElement.cpp  UIElement.h  UIManager.cpp  UIManager.h  Vec2.cpp  Vec2.h  main.cpp
